--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-05-15  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* libpoke/pkl-pass.c (pkl_do_pass_1): Avoid accessing
+	uninitialized memory.
+
 2024-05-01  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* utils/pk-jojopatch.in: Disable auto-remap to improve speed.
