--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-05-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* NEWS: Update.
+	* doc/gendocs_template: Update version to `4.1'.
+
 2024-05-15  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-pass.c (pkl_do_pass_1): Avoid accessing
