--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-05-31  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
+	* libpoke/ios-dev-mmap.c (ios_dev_mmap_open): Fix error handling
+	of `strdup'.
+
 2024-05-30  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
 	* NEWS: Update.
