--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
 
+	* libpoke/pkl-ast.h (enum pkl_ast_code): Remove `PKL_AST_GCD'.
+
+2024-06-03  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
+
 	* libpoke/pkl-ast.c (pkl_struct_type_traverse): s/strtok/strtok_r/.
 
 2024-06-02  Mohammad-Reza Nabipoor  <mnabipoor@gnu.org>
