pkl: fix (un)escapable tracking in trans phases
2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-trans.c (PKL_TRANS_PUSH_UNESCAPABLE): Define.
	(pkl_trans1_pr_type_struct): Push unescapable context.
	(pkl_trans1_ps_type_struct): Pop uescapable context.
	(pkl_transl_pr_type_struct): Push unescapable context.
	(pkl_transl_ps_type_struct): Pop uescapable context.
	(pkl_trans1_pr_type_array): Push unescapable context.
	(pkl_trans1_ps_type_array): Pop uescapable context.
	(pkl_transl_pr_type_array): Push unescapable context.
	(pkl_transl_ps_type_array): Pop uescapable context.
	(pkl_trans1_pr_func): Push unescapable context.
	(pkl_trans1_ps_func): Pop uescapable context.
	(pkl_transl_pr_func): Push and pop unescapable context.
	(PKL_TRANS_MAX_COMP_STMT_NEST): Bump to 120.
	* testsuite/poke.pkl/break-diag-2.pk: New test.
	* testsuite/poke.pkl/break-diag-3.pk: Likewise.
	* testsuite/poke.pkl/break-diag-4.pk: Likewise.
	* testsuite/poke.pkl/break-diag-5.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,26 @@
 2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-trans.c (PKL_TRANS_PUSH_UNESCAPABLE): Define.
+	(pkl_trans1_pr_type_struct): Push unescapable context.
+	(pkl_trans1_ps_type_struct): Pop uescapable context.
+	(pkl_transl_pr_type_struct): Push unescapable context.
+	(pkl_transl_ps_type_struct): Pop uescapable context.
+	(pkl_trans1_pr_type_array): Push unescapable context.
+	(pkl_trans1_ps_type_array): Pop uescapable context.
+	(pkl_transl_pr_type_array): Push unescapable context.
+	(pkl_transl_ps_type_array): Pop uescapable context.
+	(pkl_trans1_pr_func): Push unescapable context.
+	(pkl_trans1_ps_func): Pop uescapable context.
+	(pkl_transl_pr_func): Push and pop unescapable context.
+	(PKL_TRANS_MAX_COMP_STMT_NEST): Bump to 120.
+	* testsuite/poke.pkl/break-diag-2.pk: New test.
+	* testsuite/poke.pkl/break-diag-3.pk: Likewise.
+	* testsuite/poke.pkl/break-diag-4.pk: Likewise.
+	* testsuite/poke.pkl/break-diag-5.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+
+2024-06-06  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* MAINTAINERS: New file.
 	* Makefile.am (EXTRA_DIST): Add MAINTAINERS.
 	* doc/pokeint.texi: New file.
