--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2024-06-09  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* testsuite/poke.pkl/array-bound-8.pk: New test.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new test.
+
 2024-06-08  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* libpoke/pkl-trans.c (pkl_trans1_pr_try_stmt_body): increase
